--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lucide-react": "^0.544.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.1",
-    "next": "15.5.3",
+    "next": "^16.1.6",
     "next-auth": "^4.24.11",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
