--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.1",
     "next": "^16.1.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.30",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
